update sort options

--- a/src/app/pages/extended-table-preview/extended-table-preview.component.scss
+++ b/src/app/pages/extended-table-preview/extended-table-preview.component.scss
@@ -2,4 +2,5 @@
   --et-group-row-bg: #dddddd;
   --et-header-row-bg: #dddddd;
   --et-data-row-hover-bg: #eeeeee;
+  --et-checkbox-border: black;
 }
